# watermark-distortions

./: Makefile  README.md  distortions.py  distortions_test.py  pyproject.toml  setup.py
distortion/: __init__.py  distortion.py  distortion_test.py
notebook/: test.ipynb  test.py
src/: distortion.py  distortion_test.py
