[tool.poetry]
name = "distortion"
version = "0.1.0"
description = ""
authors = ["tanimutomo <tanimutomo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "1.6.0"
kornia = "0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
