[tool.poetry]
name = "distortion"
version = "0.1.20"
description = "Watermark distortions"
license = "Apache-2.0"
authors = ["tanimutomo <tanimutomo@gmail.com>"]
repository = "https://github.com/tanimutomo/watermark-distortions"
packages = [
  { include = "distortion/*.py" }
]
exclude = [".gitignore", "images", ]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.6.0"
kornia = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
